--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$ <span id="finalOutput">1278</span></h5>
+                        <h5>$ <span id="subTotal">1278</span></h5>
                         <h5>$ <span id="tax">0</span></h5>
                         <h5>$ <span id="totalSum">1278</span></h5>
                      </div>
