--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button id="itemDecrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="inputNumber" type="text" class="form-control text-center" value="1">
+                           <input disabled id="inputNumber" type="text" class="form-control text-center" value="1">
                            <button id="itemIncrease" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
                         <h5>$ <span id="pricePhone">1219</span></h5>
@@ -44,7 +44,7 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button id="caseDecrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="caseNumber" type="text" class="form-control text-center" value="1">
+                           <input disabled id="caseNumber" type="text" class="form-control text-center" value="1">
                            <button id="caseIncrease" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
